# zilean

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
benches/: client_request.rs
examples/: insert.py  testAlll.py  zileanExample.py
misc/: config.toml  deploy.sh  zilean.service
src/: config.rs  lib.rs  main.rs  prelude.rs
src/core/: account.rs  dataloader.rs  engine.rs  market.rs  mod.rs  processor.rs  recorder.rs  server.rs
src/ipc/: handlers.rs  mod.rs  traits.rs  zmq_server.rs
src/utils/: display.rs  logger.rs  mod.rs  round.rs
