[package]
name = "zilean"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rustc-hash = { version = "2.0.0", default-features = false, features = ["std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.11.0", features = ["v4"] }
zmq = "0.10.0"
