[package]
name = "zilean"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rustc-hash = { version = "2.0.0", default-features = false, features = ["std"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
time = { version = "0.3.36", default-features = false, features = ["macros"] }
nanoid = { version = "0.4.0", default-features = false }
zmq = { version = "0.10.0", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "time",
    "fmt",
    "std",
    "tracing-log",
    "env-filter",
] }
log = { version = "0.4.22", default-features = false }
sonic-rs = { version = "0.3.13", default-features = false }
clickhouse = { version = "0.13.0", default-features = false } 
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros"] }
rand_distr = "0.4"
num_cpus = "1.16.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "client_request"
harness = false

[profile.release]
debug = true
